// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component opens and closes the dropdown when clicked  1`] = `
<header>
  <a
    className="skip-nav ds-c-dialog__header"
    href="#start-main-content"
  >
    Skip to main content
  </a>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row"
    >
      <div
        className="ds-l-col--12 ds-l-md-col--3 site-title"
      >
        <Connect(DashboardButton)>
          CMS eAPD
        </Connect(DashboardButton)>
      </div>
      <div
        className="ds-l-col--12 ds-l-md-col--5"
      />
      <div
        className="ds-l-col--12 ds-l-md-col--4"
      >
        <ul
          className="nav--dropdown"
        >
          <li>
            <button
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="Logged in as frasiercrane@kacl.com. Click to manage your account."
              className="nav--dropdown__trigger ds-c-button ds-c-button--small ds-c-button--transparent"
              onClick={[Function]}
              type="button"
            >
              frasiercrane@kacl.com
              <FontAwesomeIcon
                beat={false}
                beatFade={false}
                border={false}
                bounce={false}
                className=""
                fade={false}
                fixedWidth={false}
                flip={false}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f078",
                      "M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z",
                    ],
                    "iconName": "chevron-down",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                maskId={null}
                pull={null}
                pulse={false}
                rotation={null}
                shake={false}
                size={null}
                spin={false}
                spinPulse={false}
                spinReverse={false}
                style={
                  Object {
                    "width": "8px",
                  }
                }
                swapOpacity={false}
                symbol={false}
                title=""
                titleId={null}
                transform={null}
              />
            </button>
            <ul
              aria-hidden={false}
              className="nav--submenu"
            >
              <li>
                <Link
                  className="nav--dropdown__action"
                  onClick={[Function]}
                  to="/manage-account"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [
                            "edit",
                          ],
                          "f044",
                          "M490.3 40.4C512.2 62.27 512.2 97.73 490.3 119.6L460.3 149.7L362.3 51.72L392.4 21.66C414.3-.2135 449.7-.2135 471.6 21.66L490.3 40.4zM172.4 241.7L339.7 74.34L437.7 172.3L270.3 339.6C264.2 345.8 256.7 350.4 248.4 353.2L159.6 382.8C150.1 385.6 141.5 383.4 135 376.1C128.6 370.5 126.4 361 129.2 352.4L158.8 263.6C161.6 255.3 166.2 247.8 172.4 241.7V241.7zM192 63.1C209.7 63.1 224 78.33 224 95.1C224 113.7 209.7 127.1 192 127.1H96C78.33 127.1 64 142.3 64 159.1V416C64 433.7 78.33 448 96 448H352C369.7 448 384 433.7 384 416V319.1C384 302.3 398.3 287.1 416 287.1C433.7 287.1 448 302.3 448 319.1V416C448 469 405 512 352 512H96C42.98 512 0 469 0 416V159.1C0 106.1 42.98 63.1 96 63.1H192z",
                        ],
                        "iconName": "pen-to-square",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    style={
                      Object {
                        "width": "14px",
                      }
                    }
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  />
                  Manage Account
                </Link>
              </li>
              <li>
                <Link
                  className="nav--dropdown__action"
                  onClick={[Function]}
                  to="/select-affiliation"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          576,
                          512,
                          Array [
                            "people-arrows-left-right",
                          ],
                          "e068",
                          "M96 304.1c0-12.16 4.971-23.83 13.64-32.01l72.13-68.08c1.65-1.555 3.773-2.311 5.611-3.578C177.1 176.8 155 160 128 160H64C28.65 160 0 188.7 0 224v96c0 17.67 14.33 32 31.1 32L32 480c0 17.67 14.33 32 32 32h64c17.67 0 32-14.33 32-32v-96.39l-50.36-47.53C100.1 327.9 96 316.2 96 304.1zM480 128c35.38 0 64-28.62 64-64s-28.62-64-64-64s-64 28.62-64 64S444.6 128 480 128zM96 128c35.38 0 64-28.62 64-64S131.4 0 96 0S32 28.62 32 64S60.63 128 96 128zM444.4 295.3L372.3 227.3c-3.49-3.293-8.607-4.193-13.01-2.299C354.9 226.9 352 231.2 352 236V272H224V236c0-4.795-2.857-9.133-7.262-11.03C212.3 223.1 207.2 223.1 203.7 227.3L131.6 295.3c-4.805 4.535-4.805 12.94 0 17.47l72.12 68.07c3.49 3.291 8.607 4.191 13.01 2.297C221.1 381.3 224 376.9 224 372.1V336h128v36.14c0 4.795 2.857 9.135 7.262 11.04c4.406 1.893 9.523 .9922 13.01-2.299l72.12-68.07C449.2 308.3 449.2 299.9 444.4 295.3zM512 160h-64c-26.1 0-49.98 16.77-59.38 40.42c1.842 1.271 3.969 2.027 5.623 3.588l72.12 68.06C475 280.2 480 291.9 480 304.1c.002 12.16-4.969 23.83-13.64 32.01L416 383.6V480c0 17.67 14.33 32 32 32h64c17.67 0 32-14.33 32-32v-128c17.67 0 32-14.33 32-32V224C576 188.7 547.3 160 512 160z",
                        ],
                        "iconName": "people-arrows",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    style={
                      Object {
                        "width": "14px",
                      }
                    }
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  />
                  Switch State Affiliation
                </Link>
              </li>
              <li>
                <Link
                  className="nav--dropdown__action"
                  onClick={[Function]}
                  to="/logout"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [
                            "sign-out-alt",
                          ],
                          "f2f5",
                          "M96 480h64C177.7 480 192 465.7 192 448S177.7 416 160 416H96c-17.67 0-32-14.33-32-32V128c0-17.67 14.33-32 32-32h64C177.7 96 192 81.67 192 64S177.7 32 160 32H96C42.98 32 0 74.98 0 128v256C0 437 42.98 480 96 480zM504.8 238.5l-144.1-136c-6.975-6.578-17.2-8.375-26-4.594c-8.803 3.797-14.51 12.47-14.51 22.05l-.0918 72l-128-.001c-17.69 0-32.02 14.33-32.02 32v64c0 17.67 14.34 32 32.02 32l128 .001l.0918 71.1c0 9.578 5.707 18.25 14.51 22.05c8.803 3.781 19.03 1.984 26-4.594l144.1-136C514.4 264.4 514.4 247.6 504.8 238.5z",
                        ],
                        "iconName": "right-from-bracket",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    style={
                      Object {
                        "width": "14px",
                      }
                    }
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  />
                  Log out
                </Link>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header component renders correctly when the dropdown is closed and the page is top level 1`] = `
<header>
  <a
    className="skip-nav ds-c-dialog__header"
    href="#start-main-content"
  >
    Skip to main content
  </a>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row"
    >
      <div
        className="ds-l-col--12 ds-l-md-col--3 site-title"
      >
        <Connect(DashboardButton)>
          CMS eAPD
        </Connect(DashboardButton)>
      </div>
      <div
        className="ds-l-col--12 ds-l-md-col--5"
      />
      <div
        className="ds-l-col--12 ds-l-md-col--4"
      >
        <ul
          className="nav--dropdown"
        >
          <li>
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Logged in as frasiercrane@kacl.com. Click to manage your account."
              className="nav--dropdown__trigger ds-c-button ds-c-button--small ds-c-button--transparent"
              onClick={[Function]}
              type="button"
            >
              frasiercrane@kacl.com
              <FontAwesomeIcon
                beat={false}
                beatFade={false}
                border={false}
                bounce={false}
                className=""
                fade={false}
                fixedWidth={false}
                flip={false}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f078",
                      "M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z",
                    ],
                    "iconName": "chevron-down",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                maskId={null}
                pull={null}
                pulse={false}
                rotation={null}
                shake={false}
                size={null}
                spin={false}
                spinPulse={false}
                spinReverse={false}
                style={
                  Object {
                    "width": "8px",
                  }
                }
                swapOpacity={false}
                symbol={false}
                title=""
                titleId={null}
                transform={null}
              />
            </button>
            <ul
              aria-hidden={true}
              className="nav--submenu"
            >
              <li>
                <Link
                  className="nav--dropdown__action"
                  onClick={[Function]}
                  to="/manage-account"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [
                            "edit",
                          ],
                          "f044",
                          "M490.3 40.4C512.2 62.27 512.2 97.73 490.3 119.6L460.3 149.7L362.3 51.72L392.4 21.66C414.3-.2135 449.7-.2135 471.6 21.66L490.3 40.4zM172.4 241.7L339.7 74.34L437.7 172.3L270.3 339.6C264.2 345.8 256.7 350.4 248.4 353.2L159.6 382.8C150.1 385.6 141.5 383.4 135 376.1C128.6 370.5 126.4 361 129.2 352.4L158.8 263.6C161.6 255.3 166.2 247.8 172.4 241.7V241.7zM192 63.1C209.7 63.1 224 78.33 224 95.1C224 113.7 209.7 127.1 192 127.1H96C78.33 127.1 64 142.3 64 159.1V416C64 433.7 78.33 448 96 448H352C369.7 448 384 433.7 384 416V319.1C384 302.3 398.3 287.1 416 287.1C433.7 287.1 448 302.3 448 319.1V416C448 469 405 512 352 512H96C42.98 512 0 469 0 416V159.1C0 106.1 42.98 63.1 96 63.1H192z",
                        ],
                        "iconName": "pen-to-square",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    style={
                      Object {
                        "width": "14px",
                      }
                    }
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  />
                  Manage Account
                </Link>
              </li>
              <li>
                <Link
                  className="nav--dropdown__action"
                  onClick={[Function]}
                  to="/select-affiliation"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          576,
                          512,
                          Array [
                            "people-arrows-left-right",
                          ],
                          "e068",
                          "M96 304.1c0-12.16 4.971-23.83 13.64-32.01l72.13-68.08c1.65-1.555 3.773-2.311 5.611-3.578C177.1 176.8 155 160 128 160H64C28.65 160 0 188.7 0 224v96c0 17.67 14.33 32 31.1 32L32 480c0 17.67 14.33 32 32 32h64c17.67 0 32-14.33 32-32v-96.39l-50.36-47.53C100.1 327.9 96 316.2 96 304.1zM480 128c35.38 0 64-28.62 64-64s-28.62-64-64-64s-64 28.62-64 64S444.6 128 480 128zM96 128c35.38 0 64-28.62 64-64S131.4 0 96 0S32 28.62 32 64S60.63 128 96 128zM444.4 295.3L372.3 227.3c-3.49-3.293-8.607-4.193-13.01-2.299C354.9 226.9 352 231.2 352 236V272H224V236c0-4.795-2.857-9.133-7.262-11.03C212.3 223.1 207.2 223.1 203.7 227.3L131.6 295.3c-4.805 4.535-4.805 12.94 0 17.47l72.12 68.07c3.49 3.291 8.607 4.191 13.01 2.297C221.1 381.3 224 376.9 224 372.1V336h128v36.14c0 4.795 2.857 9.135 7.262 11.04c4.406 1.893 9.523 .9922 13.01-2.299l72.12-68.07C449.2 308.3 449.2 299.9 444.4 295.3zM512 160h-64c-26.1 0-49.98 16.77-59.38 40.42c1.842 1.271 3.969 2.027 5.623 3.588l72.12 68.06C475 280.2 480 291.9 480 304.1c.002 12.16-4.969 23.83-13.64 32.01L416 383.6V480c0 17.67 14.33 32 32 32h64c17.67 0 32-14.33 32-32v-128c17.67 0 32-14.33 32-32V224C576 188.7 547.3 160 512 160z",
                        ],
                        "iconName": "people-arrows",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    style={
                      Object {
                        "width": "14px",
                      }
                    }
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  />
                  Switch State Affiliation
                </Link>
              </li>
              <li>
                <Link
                  className="nav--dropdown__action"
                  onClick={[Function]}
                  to="/logout"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [
                            "sign-out-alt",
                          ],
                          "f2f5",
                          "M96 480h64C177.7 480 192 465.7 192 448S177.7 416 160 416H96c-17.67 0-32-14.33-32-32V128c0-17.67 14.33-32 32-32h64C177.7 96 192 81.67 192 64S177.7 32 160 32H96C42.98 32 0 74.98 0 128v256C0 437 42.98 480 96 480zM504.8 238.5l-144.1-136c-6.975-6.578-17.2-8.375-26-4.594c-8.803 3.797-14.51 12.47-14.51 22.05l-.0918 72l-128-.001c-17.69 0-32.02 14.33-32.02 32v64c0 17.67 14.34 32 32.02 32l128 .001l.0918 71.1c0 9.578 5.707 18.25 14.51 22.05c8.803 3.781 19.03 1.984 26-4.594l144.1-136C514.4 264.4 514.4 247.6 504.8 238.5z",
                        ],
                        "iconName": "right-from-bracket",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    style={
                      Object {
                        "width": "14px",
                      }
                    }
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  />
                  Log out
                </Link>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header component renders the admin home title when an admin user is at a secondary page 1`] = `
<header>
  <a
    className="skip-nav ds-c-dialog__header"
    href="#start-main-content"
  >
    Skip to main content
  </a>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row"
    >
      <div
        className="ds-l-col--12 ds-l-md-col--3 site-title"
      >
        <Connect(DashboardButton)>
          <FontAwesomeIcon
            beat={false}
            beatFade={false}
            border={false}
            bounce={false}
            className=""
            fade={false}
            fixedWidth={false}
            flip={false}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [
                    9001,
                  ],
                  "f053",
                  "M224 480c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25l192-192c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l169.4 169.4c12.5 12.5 12.5 32.75 0 45.25C240.4 476.9 232.2 480 224 480z",
                ],
                "iconName": "chevron-left",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            maskId={null}
            pull={null}
            pulse={false}
            rotation={null}
            shake={false}
            size="sm"
            spin={false}
            spinPulse={false}
            spinReverse={false}
            swapOpacity={false}
            symbol={false}
            title=""
            titleId={null}
            transform={null}
          />
          WA APD Home
        </Connect(DashboardButton)>
      </div>
      <div
        className="ds-l-col--12 ds-l-md-col--5"
      />
      <div
        className="ds-l-col--12 ds-l-md-col--4"
      >
        <ul
          className="nav--dropdown"
        >
          <li>
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Logged in as frasiercrane@kacl.com. Click to manage your account."
              className="nav--dropdown__trigger ds-c-button ds-c-button--small ds-c-button--transparent"
              onClick={[Function]}
              type="button"
            >
              frasiercrane@kacl.com
              <FontAwesomeIcon
                beat={false}
                beatFade={false}
                border={false}
                bounce={false}
                className=""
                fade={false}
                fixedWidth={false}
                flip={false}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f078",
                      "M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z",
                    ],
                    "iconName": "chevron-down",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                maskId={null}
                pull={null}
                pulse={false}
                rotation={null}
                shake={false}
                size={null}
                spin={false}
                spinPulse={false}
                spinReverse={false}
                style={
                  Object {
                    "width": "8px",
                  }
                }
                swapOpacity={false}
                symbol={false}
                title=""
                titleId={null}
                transform={null}
              />
            </button>
            <ul
              aria-hidden={true}
              className="nav--submenu"
            >
              <li>
                <Link
                  className="nav--dropdown__action"
                  onClick={[Function]}
                  to="/manage-account"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [
                            "edit",
                          ],
                          "f044",
                          "M490.3 40.4C512.2 62.27 512.2 97.73 490.3 119.6L460.3 149.7L362.3 51.72L392.4 21.66C414.3-.2135 449.7-.2135 471.6 21.66L490.3 40.4zM172.4 241.7L339.7 74.34L437.7 172.3L270.3 339.6C264.2 345.8 256.7 350.4 248.4 353.2L159.6 382.8C150.1 385.6 141.5 383.4 135 376.1C128.6 370.5 126.4 361 129.2 352.4L158.8 263.6C161.6 255.3 166.2 247.8 172.4 241.7V241.7zM192 63.1C209.7 63.1 224 78.33 224 95.1C224 113.7 209.7 127.1 192 127.1H96C78.33 127.1 64 142.3 64 159.1V416C64 433.7 78.33 448 96 448H352C369.7 448 384 433.7 384 416V319.1C384 302.3 398.3 287.1 416 287.1C433.7 287.1 448 302.3 448 319.1V416C448 469 405 512 352 512H96C42.98 512 0 469 0 416V159.1C0 106.1 42.98 63.1 96 63.1H192z",
                        ],
                        "iconName": "pen-to-square",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    style={
                      Object {
                        "width": "14px",
                      }
                    }
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  />
                  Manage Account
                </Link>
              </li>
              <li>
                <Link
                  className="nav--dropdown__action"
                  onClick={[Function]}
                  to="/select-affiliation"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          576,
                          512,
                          Array [
                            "people-arrows-left-right",
                          ],
                          "e068",
                          "M96 304.1c0-12.16 4.971-23.83 13.64-32.01l72.13-68.08c1.65-1.555 3.773-2.311 5.611-3.578C177.1 176.8 155 160 128 160H64C28.65 160 0 188.7 0 224v96c0 17.67 14.33 32 31.1 32L32 480c0 17.67 14.33 32 32 32h64c17.67 0 32-14.33 32-32v-96.39l-50.36-47.53C100.1 327.9 96 316.2 96 304.1zM480 128c35.38 0 64-28.62 64-64s-28.62-64-64-64s-64 28.62-64 64S444.6 128 480 128zM96 128c35.38 0 64-28.62 64-64S131.4 0 96 0S32 28.62 32 64S60.63 128 96 128zM444.4 295.3L372.3 227.3c-3.49-3.293-8.607-4.193-13.01-2.299C354.9 226.9 352 231.2 352 236V272H224V236c0-4.795-2.857-9.133-7.262-11.03C212.3 223.1 207.2 223.1 203.7 227.3L131.6 295.3c-4.805 4.535-4.805 12.94 0 17.47l72.12 68.07c3.49 3.291 8.607 4.191 13.01 2.297C221.1 381.3 224 376.9 224 372.1V336h128v36.14c0 4.795 2.857 9.135 7.262 11.04c4.406 1.893 9.523 .9922 13.01-2.299l72.12-68.07C449.2 308.3 449.2 299.9 444.4 295.3zM512 160h-64c-26.1 0-49.98 16.77-59.38 40.42c1.842 1.271 3.969 2.027 5.623 3.588l72.12 68.06C475 280.2 480 291.9 480 304.1c.002 12.16-4.969 23.83-13.64 32.01L416 383.6V480c0 17.67 14.33 32 32 32h64c17.67 0 32-14.33 32-32v-128c17.67 0 32-14.33 32-32V224C576 188.7 547.3 160 512 160z",
                        ],
                        "iconName": "people-arrows",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    style={
                      Object {
                        "width": "14px",
                      }
                    }
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  />
                  Switch State Affiliation
                </Link>
              </li>
              <li>
                <Link
                  className="nav--dropdown__action"
                  onClick={[Function]}
                  to="/logout"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [
                            "sign-out-alt",
                          ],
                          "f2f5",
                          "M96 480h64C177.7 480 192 465.7 192 448S177.7 416 160 416H96c-17.67 0-32-14.33-32-32V128c0-17.67 14.33-32 32-32h64C177.7 96 192 81.67 192 64S177.7 32 160 32H96C42.98 32 0 74.98 0 128v256C0 437 42.98 480 96 480zM504.8 238.5l-144.1-136c-6.975-6.578-17.2-8.375-26-4.594c-8.803 3.797-14.51 12.47-14.51 22.05l-.0918 72l-128-.001c-17.69 0-32.02 14.33-32.02 32v64c0 17.67 14.34 32 32.02 32l128 .001l.0918 71.1c0 9.578 5.707 18.25 14.51 22.05c8.803 3.781 19.03 1.984 26-4.594l144.1-136C514.4 264.4 514.4 247.6 504.8 238.5z",
                        ],
                        "iconName": "right-from-bracket",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    style={
                      Object {
                        "width": "14px",
                      }
                    }
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  />
                  Log out
                </Link>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header component renders the state admin link when user has required permissions 1`] = `
<header>
  <a
    className="skip-nav ds-c-dialog__header"
    href="#start-main-content"
  >
    Skip to main content
  </a>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row"
    >
      <div
        className="ds-l-col--12 ds-l-md-col--3 site-title"
      >
        <Connect(DashboardButton)>
          <FontAwesomeIcon
            beat={false}
            beatFade={false}
            border={false}
            bounce={false}
            className=""
            fade={false}
            fixedWidth={false}
            flip={false}
            icon={
              Object {
                "icon": Array [
                  320,
                  512,
                  Array [
                    9001,
                  ],
                  "f053",
                  "M224 480c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25l192-192c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l169.4 169.4c12.5 12.5 12.5 32.75 0 45.25C240.4 476.9 232.2 480 224 480z",
                ],
                "iconName": "chevron-left",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            maskId={null}
            pull={null}
            pulse={false}
            rotation={null}
            shake={false}
            size="sm"
            spin={false}
            spinPulse={false}
            spinReverse={false}
            swapOpacity={false}
            symbol={false}
            title=""
            titleId={null}
            transform={null}
          />
          WA APD Home
        </Connect(DashboardButton)>
      </div>
      <div
        className="ds-l-col--12 ds-l-md-col--5"
      />
      <div
        className="ds-l-col--12 ds-l-md-col--4"
      >
        <ul
          className="nav--dropdown"
        >
          <li>
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Logged in as frasiercrane@kacl.com. Click to manage your account."
              className="nav--dropdown__trigger ds-c-button ds-c-button--small ds-c-button--transparent"
              onClick={[Function]}
              type="button"
            >
              frasiercrane@kacl.com
              <FontAwesomeIcon
                beat={false}
                beatFade={false}
                border={false}
                bounce={false}
                className=""
                fade={false}
                fixedWidth={false}
                flip={false}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f078",
                      "M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z",
                    ],
                    "iconName": "chevron-down",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                maskId={null}
                pull={null}
                pulse={false}
                rotation={null}
                shake={false}
                size={null}
                spin={false}
                spinPulse={false}
                spinReverse={false}
                style={
                  Object {
                    "width": "8px",
                  }
                }
                swapOpacity={false}
                symbol={false}
                title=""
                titleId={null}
                transform={null}
              />
            </button>
            <ul
              aria-hidden={true}
              className="nav--submenu"
            >
              <li>
                <Link
                  className="nav--dropdown__action"
                  onClick={[Function]}
                  to="/state-admin"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          640,
                          512,
                          Array [],
                          "f505",
                          "M622.3 271.1l-115.1-45.01c-4.125-1.629-12.62-3.754-22.25 0L369.8 271.1C359 275.2 352 285.1 352 295.1c0 111.6 68.75 188.8 132.9 213.9c9.625 3.75 18 1.625 22.25 0C558.4 489.9 640 420.5 640 295.1C640 285.1 633 275.2 622.3 271.1zM496 462.4V273.2l95.5 37.38C585.9 397.8 530.6 446 496 462.4zM224 256c70.7 0 128-57.31 128-128S294.7 0 224 0C153.3 0 96 57.31 96 128S153.3 256 224 256zM320.6 310.3C305.9 306.3 290.6 304 274.7 304H173.3C77.61 304 0 381.7 0 477.4C0 496.5 15.52 512 34.66 512H413.3c3.143 0 5.967-1.004 8.861-1.789C369.7 469.8 324.1 400.3 320.6 310.3z",
                        ],
                        "iconName": "user-shield",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    style={
                      Object {
                        "width": "14px",
                      }
                    }
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  />
                </Link>
              </li>
              <li>
                <Link
                  className="nav--dropdown__action"
                  onClick={[Function]}
                  to="/manage-account"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [
                            "edit",
                          ],
                          "f044",
                          "M490.3 40.4C512.2 62.27 512.2 97.73 490.3 119.6L460.3 149.7L362.3 51.72L392.4 21.66C414.3-.2135 449.7-.2135 471.6 21.66L490.3 40.4zM172.4 241.7L339.7 74.34L437.7 172.3L270.3 339.6C264.2 345.8 256.7 350.4 248.4 353.2L159.6 382.8C150.1 385.6 141.5 383.4 135 376.1C128.6 370.5 126.4 361 129.2 352.4L158.8 263.6C161.6 255.3 166.2 247.8 172.4 241.7V241.7zM192 63.1C209.7 63.1 224 78.33 224 95.1C224 113.7 209.7 127.1 192 127.1H96C78.33 127.1 64 142.3 64 159.1V416C64 433.7 78.33 448 96 448H352C369.7 448 384 433.7 384 416V319.1C384 302.3 398.3 287.1 416 287.1C433.7 287.1 448 302.3 448 319.1V416C448 469 405 512 352 512H96C42.98 512 0 469 0 416V159.1C0 106.1 42.98 63.1 96 63.1H192z",
                        ],
                        "iconName": "pen-to-square",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    style={
                      Object {
                        "width": "14px",
                      }
                    }
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  />
                  Manage Account
                </Link>
              </li>
              <li>
                <Link
                  className="nav--dropdown__action"
                  onClick={[Function]}
                  to="/select-affiliation"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          576,
                          512,
                          Array [
                            "people-arrows-left-right",
                          ],
                          "e068",
                          "M96 304.1c0-12.16 4.971-23.83 13.64-32.01l72.13-68.08c1.65-1.555 3.773-2.311 5.611-3.578C177.1 176.8 155 160 128 160H64C28.65 160 0 188.7 0 224v96c0 17.67 14.33 32 31.1 32L32 480c0 17.67 14.33 32 32 32h64c17.67 0 32-14.33 32-32v-96.39l-50.36-47.53C100.1 327.9 96 316.2 96 304.1zM480 128c35.38 0 64-28.62 64-64s-28.62-64-64-64s-64 28.62-64 64S444.6 128 480 128zM96 128c35.38 0 64-28.62 64-64S131.4 0 96 0S32 28.62 32 64S60.63 128 96 128zM444.4 295.3L372.3 227.3c-3.49-3.293-8.607-4.193-13.01-2.299C354.9 226.9 352 231.2 352 236V272H224V236c0-4.795-2.857-9.133-7.262-11.03C212.3 223.1 207.2 223.1 203.7 227.3L131.6 295.3c-4.805 4.535-4.805 12.94 0 17.47l72.12 68.07c3.49 3.291 8.607 4.191 13.01 2.297C221.1 381.3 224 376.9 224 372.1V336h128v36.14c0 4.795 2.857 9.135 7.262 11.04c4.406 1.893 9.523 .9922 13.01-2.299l72.12-68.07C449.2 308.3 449.2 299.9 444.4 295.3zM512 160h-64c-26.1 0-49.98 16.77-59.38 40.42c1.842 1.271 3.969 2.027 5.623 3.588l72.12 68.06C475 280.2 480 291.9 480 304.1c.002 12.16-4.969 23.83-13.64 32.01L416 383.6V480c0 17.67 14.33 32 32 32h64c17.67 0 32-14.33 32-32v-128c17.67 0 32-14.33 32-32V224C576 188.7 547.3 160 512 160z",
                        ],
                        "iconName": "people-arrows",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    style={
                      Object {
                        "width": "14px",
                      }
                    }
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  />
                  Switch State Affiliation
                </Link>
              </li>
              <li>
                <Link
                  className="nav--dropdown__action"
                  onClick={[Function]}
                  to="/logout"
                >
                  <FontAwesomeIcon
                    beat={false}
                    beatFade={false}
                    border={false}
                    bounce={false}
                    className=""
                    fade={false}
                    fixedWidth={false}
                    flip={false}
                    icon={
                      Object {
                        "icon": Array [
                          512,
                          512,
                          Array [
                            "sign-out-alt",
                          ],
                          "f2f5",
                          "M96 480h64C177.7 480 192 465.7 192 448S177.7 416 160 416H96c-17.67 0-32-14.33-32-32V128c0-17.67 14.33-32 32-32h64C177.7 96 192 81.67 192 64S177.7 32 160 32H96C42.98 32 0 74.98 0 128v256C0 437 42.98 480 96 480zM504.8 238.5l-144.1-136c-6.975-6.578-17.2-8.375-26-4.594c-8.803 3.797-14.51 12.47-14.51 22.05l-.0918 72l-128-.001c-17.69 0-32.02 14.33-32.02 32v64c0 17.67 14.34 32 32.02 32l128 .001l.0918 71.1c0 9.578 5.707 18.25 14.51 22.05c8.803 3.781 19.03 1.984 26-4.594l144.1-136C514.4 264.4 514.4 247.6 504.8 238.5z",
                        ],
                        "iconName": "right-from-bracket",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    maskId={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    shake={false}
                    size={null}
                    spin={false}
                    spinPulse={false}
                    spinReverse={false}
                    style={
                      Object {
                        "width": "14px",
                      }
                    }
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    titleId={null}
                    transform={null}
                  />
                  Log out
                </Link>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
`;
